# CSPi

./: .gitignore  README.md  csi.proto
cspi/: Cargo.toml  build.rs
cspi/src/: commands.rs  main.rs
cspi/src/commands/: apply.rs  collect.rs  decode.rs  install.rs  restore.rs  running.rs  start.rs  stop.rs
cspi/src/proto/: csi.rs  mod.rs
example_applications/colormap_visualizer/: colormap_visualizer.py
example_applications/live_visualizer/: live_visualizer.py
example_applications/live_visualizer/proto/: csi_pb2.py
example_applications/spectrogram_visualizer/: spectrogram_visualizer.py
