[package]
name = "cspi"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
uname-rs = "0.1.1"
reqwest = { version = "0.12.3", features = ["blocking"] }
xz2 = "0.1.7"
tar = "0.4.40"
daemonize = "0.5.0"
bytes = "1.6.0"
prost = "0.12.4"
spinner = "0.5.0"

[build-dependencies]
prost-build = { version = "0.12.4" }